--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@react-three/drei": "^9.88.11",
+    "@splinetool/r3f-spline": "^1.0.2",
     "clsx": "^2.0.0",
     "next": "13.5.4",
     "react": "18.2.0",
