--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-three/drei": "^9.88.11",
     "@splinetool/r3f-spline": "^1.0.2",
     "clsx": "^2.0.0",
+    "gsap": "^3.12.2",
     "next": "13.5.4",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
